--- a/src/App.css
+++ b/src/App.css
@@ -4,39 +4,111 @@
   padding: 2rem;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  background-color: #141f42;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+.container {
+  display: grid;
+  max-width: 1200px;
+  border-width: 1px;
+  border-color: white;
+  border-style: solid;
+  gap: 1rem
+}
+
+
+.partOne {
+background-color: dodgerblue;
+color: white;
+padding: 2rem 2rem 2rem 2rem
+}
+
+.partTwo {
+  display:flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: dodgerblue;
+  color: white;
+  padding: 2rem 2rem 2rem 2rem
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.select{
+  color: hsl(0, 0%, 40%);
+  display: inline-block;
+  font-size: 12;
+  font-style: italic;
+  margin-top: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+
+@media (max-width: 600px) {
+  .container { grid-template-columns: repeat(1, 1fr); }
 }
 
-.card {
-  padding: 2em;
+@media (min-width: 600px) {
+  .container { grid-template-columns: repeat(2, 1fr); }
 }
 
-.read-the-docs {
-  color: #888;
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: auto;
+  gap: 10px;
+  padding: 20px;
+}
+
+.grid-item {
+  background-color: #3498db;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.grid-item:nth-child(odd) {
+  background-color: #2ecc71;
+}
+
+label {
+  color: #333;
+  font-weight: bold;
+  grid-row: span 1;
+  grid-column: span 1;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  grid-row: span 1;
+  grid-column: span 1;
+}
+
+#lastName {
+  grid-column: span 1;
+}
+
+#charCount {
+  margin-top: 10px;
+  color: #333;
+}
+
+.radio-container {
+  display: flex;
+  justify-content: space-between;
+  grid-column: span 1;
+}
+
+.radio-item {
+  margin-right: 10px;
 }
