--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ body{
 
 
 
+
+/* 
 .container {
   display: grid;
   max-width: 1200px;
@@ -111,4 +113,110 @@ textarea {
 
 .radio-item {
   margin-right: 10px;
+} */
+
+/* 
+.grid-container {
+  display: grid;
+
+  grid-template-columns: repeat(1, 1fr);
+
+  grid-template-columns: [col-1-start] 1fr [col-1-end col-2-start] 1fr [col-2-end col-3-start] 1fr [col-3-end col-4-start] 1fr [col-4-end];
+
+  grid-template-rows:
+    [row-1-start] minmax(100px, auto) [row-1-end row-2-start] minmax(
+      100px,
+      auto
+    )
+    [row-2-end col-3-start] minmax(100px, auto) [row-3-end row-4-start] minmax(
+      100px,
+      auto
+    )
+    [row-4-end];
+  
+  grid-gap: 20px 10px;
+    max-width: 1200px;
+    border-width: 1px;
+    border-color: white;
+    border-style: solid;
+ 
+  
 }
+.grid-item {
+  background: gray;
+  border: 1px solid black;
+}
+.child1 {
+  grid-column-start: col-1-start;
+  grid-column-end: col-4-end;
+}
+.child3 {
+  grid-column-start: col-2-start;
+  grid-column-end: col-4-end;
+}
+
+.child4 {
+  grid-column-start: col-1-start;
+  grid-column-end: col-4-end;
+}
+
+@media (max-width: 600px) {
+  .grid-container { grid-template-columns: repeat(1, 1fr); }
+}
+
+@media (min-width: 600px) {
+  .grid-container { grid-template-columns: repeat(2, 1fr); }
+} */
+
+
+.grid-container {
+  display: grid;
+  max-width: 1200px;
+
+  grid-template-columns:  25% 25% 25% 25%;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "header header header header"
+    "sidebar main main main"
+    "footer footer footer footer";
+
+   width: 1200px;
+    border-width: 1px;
+    border-color: white;
+    border-style: solid;
+    gap: 1rem
+
+}
+.grid-item {
+  
+  /* border: 1px solid black; */
+  background-color: dodgerblue;
+  color: white;
+  padding: 2rem 2rem 2rem 2rem
+}
+
+.a {
+  grid-area: header;
+}
+.b {
+  grid-area: sidebar;
+}
+.c {
+  grid-area: main;
+}
+.d {
+  grid-area: footer;
+}
+
+@media (max-width: 600px) {
+  .grid-container { grid-template-areas: 
+    "header header header header"
+    "sidebar sidebar sidebar sidebar"
+    "main main main main"
+    "footer footer footer footer"; }
+}
+
+/* @media (min-width: 600px) {
+  .grid-container { grid-template-columns: repeat(2, 1fr); }
+}  */
+
