--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap');
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -8,83 +10,60 @@ body{
   background-color: #141f42;
 }
 
+h1{
+  color: #c3c3c3;
+}
 
-
-
-/* 
 .container {
-  display: grid;
-  max-width: 1200px;
-  border-width: 1px;
-  border-color: white;
-  border-style: solid;
-  gap: 1rem
+  /* border: 3px solid #af6ab3; */
+  border-left:solid red 5px;
+    border-right:solid violet 5px;
+    border-top:solid dodgerblue 5px;
+    border-bottom:solid #07bc0c 5px;
+  border-radius: 0px;
+  color: #f8f9fe;
+  font-family: 'Raleway', sans-serif;
+padding: 2rem 6rem 0 3rem;
+margin-top: 5rem;
+}
+.container > * {
+  /* background: dodgerblue; */
+  border-radius: 5px;
+  /* min-width: 100px; */
+  padding: 10px;
+  margin: 5px;
+}
+
+.header{
+ text-align: center;
+ background: none;
 }
 
 
-.partOne {
-background-color: dodgerblue;
-color: white;
-padding: 2rem 2rem 2rem 2rem
-}
-
-.partTwo {
-  display:flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  background-color: dodgerblue;
-  color: white;
-  padding: 2rem 2rem 2rem 2rem
-  }
-
-.select{
-  color: hsl(0, 0%, 40%);
-  display: inline-block;
-  font-size: 12;
-  font-style: italic;
-  margin-top: 1em;
+.sidebar{
+  background: none;
+  text-align: justify;
+  text-justify: auto;
+  margin-right: 2rem;
 }
 
 
-@media (max-width: 600px) {
-  .container { grid-template-columns: repeat(1, 1fr); }
+sup{
+  color:#07bc0c;
+  position: relative; 
+  top: .45em;
+  padding-right:.1em;
+  font-size: 2rem;
+} 
+
+.promise{
+  color: #a69cac;
+  font-size: 0.75rem;
+
+
 }
 
-@media (min-width: 600px) {
-  .container { grid-template-columns: repeat(2, 1fr); }
-}
 
-
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: auto;
-  gap: 10px;
-  padding: 20px;
-}
-
-.grid-item {
-  background-color: #3498db;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-}
-
-.grid-item:nth-child(odd) {
-  background-color: #2ecc71;
-}
-
-label {
-  color: #333;
-  font-weight: bold;
-  grid-row: span 1;
-  grid-column: span 1;
-}
 
 input,
 select,
@@ -94,129 +73,129 @@ textarea {
   box-sizing: border-box;
   grid-row: span 1;
   grid-column: span 1;
+  margin-top: 1rem;
 }
 
-#lastName {
-  grid-column: span 1;
+.select{
+  color: black;
+text-align: left; 
+ /* display: inline-block; */
+  font-size: 12;
+  font-style: italic;
+  margin-top: 1em;
 }
 
-#charCount {
-  margin-top: 10px;
-  color: #333;
+
+
+input, textarea{
+background-color: #f8f9fe;
+border: 1px solid #f8f9fe;
+font-family: 'Raleway', sans-serif;
+
+border-radius: 5px;
 }
 
-.radio-container {
+.names {
   display: flex;
-  justify-content: space-between;
+  gap: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+  grid-row: span 1;
   grid-column: span 1;
 }
 
-.radio-item {
-  margin-right: 10px;
-} */
+textarea{
+  height: 10rem;
+  font-family: 'Raleway', sans-serif;
+  font-size: large;
+}
 
-/* 
-.grid-container {
-  display: grid;
 
-  grid-template-columns: repeat(1, 1fr);
+.error{
+  text-align: left;
+  font-family: 'Raleway', sans-serif;
+  font-size: 0.8rem;}
 
-  grid-template-columns: [col-1-start] 1fr [col-1-end col-2-start] 1fr [col-2-end col-3-start] 1fr [col-3-end col-4-start] 1fr [col-4-end];
+.button {
+  width: 5rem;
+  margin: 0 auto; /* Center the button horizontally on small screens */
+  padding: 1rem 0 2rem 0;
 
-  grid-template-rows:
-    [row-1-start] minmax(100px, auto) [row-1-end row-2-start] minmax(
-      100px,
-      auto
-    )
-    [row-2-end col-3-start] minmax(100px, auto) [row-3-end row-4-start] minmax(
-      100px,
-      auto
-    )
-    [row-4-end];
-  
-  grid-gap: 20px 10px;
-    max-width: 1200px;
-    border-width: 1px;
-    border-color: white;
-    border-style: solid;
+}
+
+.sendBtn{
+  /* border: none; */
+  background-color: rgba(248,249,254, 0.4);
+  border: 2px solid #c3c3c3;
+  padding: 5px;
+  color: #c3c3c3;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px #a69cac;
+  cursor: pointer;
+  transition: all 0.2s ease;
+
+}
+
+.sendBtn:hover{
+  border: 2px solid #f8f9fe;
+
+background-color: rgba(248,249,254, 0.4);
+opacity: 0.33;
+}
+
+.sendBtn:active {
+
+  box-shadow: 0 0 2px black;
+  transform: translateY(2px);
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .button {
+    margin: 0 auto; /* Center the button horizontally on small screens */
+  }
+
+ .sidebar{
+  text-align: center;
+ }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+
+  .container > * {
+    grid-column: 1 / span 4;
+  }
+
+  .header{
+    text-align: left;   
+   }
+
+  .sidebar {
+    grid-column: 1/2;
+    text-align: left;   
+
+  }
+  .content {
+    grid-column: 2/5;
+  }
+
+}
+
+@media screen and (min-width: 1024px) {
+  .content {
+    grid-column: 2/4;
+  }
  
-  
-}
-.grid-item {
-  background: gray;
-  border: 1px solid black;
-}
-.child1 {
-  grid-column-start: col-1-start;
-  grid-column-end: col-4-end;
-}
-.child3 {
-  grid-column-start: col-2-start;
-  grid-column-end: col-4-end;
 }
 
-.child4 {
-  grid-column-start: col-1-start;
-  grid-column-end: col-4-end;
-}
-
-@media (max-width: 600px) {
-  .grid-container { grid-template-columns: repeat(1, 1fr); }
-}
-
-@media (min-width: 600px) {
-  .grid-container { grid-template-columns: repeat(2, 1fr); }
-} */
-
-
-.grid-container {
-  display: grid;
-  max-width: 1200px;
-
-  grid-template-columns:  25% 25% 25% 25%;
-  grid-template-rows: auto;
-  grid-template-areas: 
-    "header header header header"
-    "sidebar main main main"
-    "footer footer footer footer";
-
-   width: 1200px;
-    border-width: 1px;
-    border-color: white;
-    border-style: solid;
-    gap: 1rem
-
-}
-.grid-item {
-  
-  /* border: 1px solid black; */
-  background-color: dodgerblue;
-  color: white;
-  padding: 2rem 2rem 2rem 2rem
-}
-
-.a {
-  grid-area: header;
-}
-.b {
-  grid-area: sidebar;
-}
-.c {
-  grid-area: main;
-}
-.d {
-  grid-area: footer;
-}
-
-@media (max-width: 600px) {
-  .grid-container { grid-template-areas: 
-    "header header header header"
-    "sidebar sidebar sidebar sidebar"
-    "main main main main"
-    "footer footer footer footer"; }
-}
-
-/* @media (min-width: 600px) {
-  .grid-container { grid-template-columns: repeat(2, 1fr); }
-}  */
 
