--- a/src/App.css
+++ b/src/App.css
@@ -114,11 +114,48 @@ textarea{
 .error{
   text-align: left;
   font-family: 'Raleway', sans-serif;
-  font-size: 0.8rem;}
+  font-size: 0.8rem
+}
+
+
+.popup {
+  width: 100%;
+  background-color: #e8f0fe;
+  color: #141f42;
+  text-align: center;
+  border-radius: 6px;
+  margin-top: 2rem;
+  z-index: 1;
+  bottom: 125%; 
+  left: 50%;
+  bottom: 0; 
+  opacity: 0; 
+  animation: fadeInAndOut 10s ease-in-out forwards; 
+  opacity: 0;
+  pointer-events: none; 
+  transition: opacity 1s ease-in-out; 
+}
+
+.popup.active {
+  opacity: 1;
+  pointer-events: auto; 
+}
+
+@keyframes fadeInAndOut {
+  0%, 100% {
+    opacity: 0;
+    bottom: 0; 
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
 
 .button {
   width: 5rem;
-  margin: 0 auto; /* Center the button horizontally on small screens */
+  margin: 0 auto; 
   padding: 1rem 0 2rem 0;
 
 }
@@ -128,7 +165,7 @@ textarea{
   background-color: rgba(248,249,254, 0.4);
   border: 2px solid #c3c3c3;
   padding: 5px;
-  color: #c3c3c3;
+  color:white;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 1rem;
