--- a/src/App.css
+++ b/src/App.css
@@ -6,27 +6,29 @@
   padding: 2rem;
   text-align: center;
 }
-body{
+
+body {
   background-color: #141f42;
 }
 
-h1{
+h1 {
   color: #c3c3c3;
 }
 
 .container {
   /* border: 3px solid #af6ab3; */
-  border-left:solid #07bc0c 5px;
-    border-right:solid violet 5px;
-    border-top:solid dodgerblue 5px;
-    border-bottom:solid red 5px;
+  border-left: solid #07bc0c 5px;
+  border-right: solid violet 5px;
+  border-top: solid dodgerblue 5px;
+  border-bottom: solid dodgerblue 5px;
   border-radius: 0px;
   color: #f8f9fe;
   font-family: 'Raleway', sans-serif;
-padding: 2rem 6rem 0 3rem;
-margin-top: 5rem;
+  padding: 2rem 6rem 0 3rem;
+  margin-top: 5rem;
 }
-.container > * {
+
+.container>* {
   /* background: dodgerblue; */
   border-radius: 5px;
   /* min-width: 100px; */
@@ -34,13 +36,13 @@ margin-top: 5rem;
   margin: 5px;
 }
 
-.header{
- text-align: center;
- background: none;
+.header {
+  text-align: center;
+  background: none;
 }
 
 
-.sidebar{
+.sidebar {
   background: none;
   text-align: justify;
   text-justify: auto;
@@ -48,21 +50,20 @@ margin-top: 5rem;
 }
 
 
-sup{
-  color:#07bc0c;
-  position: relative; 
+sup {
+  color: #07bc0c;
+  position: relative;
   top: .45em;
-  padding-right:.1em;
+  padding-right: .1em;
   font-size: 2rem;
-} 
+}
 
-.promise{
+.promise {
   color: #a69cac;
   font-size: 0.75rem;
 
 
 }
-
 
 
 input,
@@ -76,10 +77,10 @@ textarea {
   margin-top: 1rem;
 }
 
-.select{
+.select {
   color: black;
-text-align: left; 
- /* display: inline-block; */
+  text-align: left;
+  /* display: inline-block; */
   font-size: 12;
   font-style: italic;
   margin-top: 1em;
@@ -87,12 +88,13 @@ text-align: left;
 
 
 
-input, textarea{
-background-color: #f8f9fe;
-border: 1px solid #f8f9fe;
-font-family: 'Raleway', sans-serif;
+input,
+textarea {
+  background-color: #f8f9fe;
+  border: 1px solid #f8f9fe;
+  font-family: 'Raleway', sans-serif;
 
-border-radius: 5px;
+  border-radius: 5px;
 }
 
 .names {
@@ -104,14 +106,14 @@ border-radius: 5px;
   grid-column: span 1;
 }
 
-textarea{
+textarea {
   height: 10rem;
   font-family: 'Raleway', sans-serif;
   font-size: large;
 }
 
 
-.error{
+.error {
   text-align: left;
   font-family: 'Raleway', sans-serif;
   font-size: 0.8rem
@@ -126,25 +128,27 @@ textarea{
   border-radius: 6px;
   margin-top: 2rem;
   z-index: 1;
-  bottom: 125%; 
+  bottom: 125%;
   left: 50%;
-  bottom: 0; 
-  opacity: 0; 
-  animation: fadeInAndOut 10s ease-in-out forwards; 
+  bottom: 0;
   opacity: 0;
-  pointer-events: none; 
-  transition: opacity 1s ease-in-out; 
+  animation: fadeInAndOut 10s ease-in-out forwards;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 1s ease-in-out;
 }
 
 .popup.active {
   opacity: 1;
-  pointer-events: auto; 
+  pointer-events: auto;
 }
 
 @keyframes fadeInAndOut {
-  0%, 100% {
+
+  0%,
+  100% {
     opacity: 0;
-    bottom: 0; 
+    bottom: 0;
   }
 
   50% {
@@ -155,17 +159,17 @@ textarea{
 
 .button {
   width: 5rem;
-  margin: 0 auto; 
+  margin: 0 auto;
   padding: 1rem 0 2rem 0;
 
 }
 
-.sendBtn{
+.sendBtn {
   /* border: none; */
-  background-color: rgba(248,249,254, 0.4);
+  background-color: rgba(248, 249, 254, 0.4);
   border: 2px solid #c3c3c3;
   padding: 5px;
-  color:white;
+  color: white;
   font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 1rem;
@@ -178,11 +182,11 @@ textarea{
 
 }
 
-.sendBtn:hover{
+.sendBtn:hover {
   border: 2px solid #f8f9fe;
 
-background-color: rgba(248,249,254, 0.4);
-opacity: 0.33;
+  background-color: rgba(248, 249, 254, 0.4);
+  opacity: 0.33;
 }
 
 .sendBtn:active {
@@ -195,12 +199,12 @@ opacity: 0.33;
 
 @media screen and (max-width: 768px) {
   .button {
-    margin: 0 auto; /* Center the button horizontally on small screens */
+    margin: 0 auto;
   }
 
- .sidebar{
-  text-align: center;
- }
+  .sidebar {
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -209,19 +213,20 @@ opacity: 0.33;
     grid-template-columns: 1fr 3fr;
   }
 
-  .container > * {
+  .container>* {
     grid-column: 1 / span 4;
   }
 
-  .header{
-    text-align: left;   
-   }
+  .header {
+    text-align: left;
+  }
 
   .sidebar {
     grid-column: 1/2;
-    text-align: left;   
+    text-align: left;
 
   }
+
   .content {
     grid-column: 2/5;
   }
@@ -232,7 +237,5 @@ opacity: 0.33;
   .content {
     grid-column: 2/4;
   }
- 
+
 }
-
-
